--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           />
 
           <select id="authorSelect">
-            <option value="">Alle Autoren</option>
+            <option value="">Alle Finder</option>
             <!-- Options will be dynamically generated if you prefer -->
           </select>
         </div>
