--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
       </div>
     </div>
 
+    <!-- Leaderboard für Top 3 größte Entfernungen -->
+    <div id="distanceLeaderboard" class="leaderboard-container">
+      <h2>📏 Entfernungs-Ranglistes</h2>
+      <ul id="distanceLeaderboardList"></ul>
+    </div>
     <!-- Leaderboard für Sticker-Finder -->
     <div id="leaderboard" class="leaderboard-container">
       <h2>🏆 Sticker-Rangliste</h2>
       <ul id="leaderboardList"></ul>
     </div>
 
-    <!-- Leaderboard für Top 3 größte Entfernungen -->
-    <div id="distanceLeaderboard" class="leaderboard-container">
-      <h2>📏 Top 5 Sticker mit größter Entfernung</h2>
-      <ul id="distanceLeaderboardList"></ul>
-    </div>
 
     <!-- Disclaimer Box -->
     <div class="disclaimer-box">
