--- a/index.html
+++ b/index.html
@@ -18,11 +18,22 @@
       <div class="banner-content">
         <img src="img/valentinSticker.webp" alt="Valentinsticker Logo" />
         <h1>Valentinsticker.de</h1>
-        <button id="toggleAnimationBtn">🎉 Animation an</button>
-        <button id="settingsBtn">⚙️ Einstellungen</button>
-        <button id="toggleCursorBtn">🖱️ Cursor Effekt</button>
-        <button id="toggleViewBtn">📷 Nur Galerie anzeigen</button>
+        <nav class="button-nav">
+          <button id="toggleAnimationBtn">🎉 Animation an</button>
+          <button id="settingsBtn">⚙️ Einstellungen</button>
+          <button id="toggleCursorBtn">🖱️ Cursor Effekt</button>
+          <button id="toggleViewBtn">📷 Nur Galerie anzeigen</button>
+        </nav>
+        <button id="hamburgerBtn" class="hamburger-btn">☰</button>
       </div>
+
+      <!-- Mobile Menu -->
+      <nav id="mobileMenu" class="mobile-menu hidden">
+        <button id="toggleAnimationBtnMobile">🎉 Animation an</button>
+        <button id="settingsBtnMobile">⚙️ Einstellungen</button>
+        <button id="toggleCursorBtnMobile">🖱️ Cursor Effekt</button>
+        <button id="toggleViewBtnMobile">📷 Nur Galerie anzeigen</button>
+      </nav>
     </header>
 
     <!-- Settings Panel -->
